--- a/Taller_WebScraping_ADRES.ipynb
+++ b/Taller_WebScraping_ADRES.ipynb
@@ -671,6 +671,341 @@
     "    print(f\"   🔑 Palabras clave: {len(resultados['analisis']['palabras_clave'])}\")\n",
     "    print(f\"   📝 Caracteres analizados: {resultados['analisis']['longitud_texto']:,}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56157c2e",
+   "metadata": {},
+   "source": [
+    "## 🔍 Exploración Ética Multi-página\n",
+    "\n",
+    "Para encontrar más PDFs sin causar daños, vamos a explorar múltiples páginas relevantes de ADRES manteniendo los principios éticos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b711fdc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Función extraer_enlaces_internos() definida\n"
+     ]
+    }
+   ],
+   "source": [
+    "def extraer_enlaces_internos(soup, url_base):\n",
+    "    \"\"\"\n",
+    "    Extrae enlaces internos de ADRES para explorar más páginas\n",
+    "    \n",
+    "    Args:\n",
+    "        soup: Objeto BeautifulSoup\n",
+    "        url_base: URL base del sitio\n",
+    "    \n",
+    "    Returns:\n",
+    "        Lista de URLs internas a explorar\n",
+    "    \"\"\"\n",
+    "    from urllib.parse import urljoin, urlparse\n",
+    "    \n",
+    "    enlaces_internos = set()\n",
+    "    dominio_base = urlparse(url_base).netloc\n",
+    "    \n",
+    "    # Buscar todos los enlaces\n",
+    "    for enlace in soup.find_all('a', href=True):\n",
+    "        url_completa = urljoin(url_base, enlace['href'])\n",
+    "        parsed = urlparse(url_completa)\n",
+    "        \n",
+    "        # Solo enlaces del mismo dominio\n",
+    "        if parsed.netloc == dominio_base:\n",
+    "            # Filtrar URLs relevantes (normograma, guías, resoluciones)\n",
+    "            if any(palabra in url_completa.lower() for palabra in \n",
+    "                   ['normograma', 'guia', 'resolucion', 'documento', 'compilacion', 'aprende']):\n",
+    "                enlaces_internos.add(url_completa)\n",
+    "    \n",
+    "    return list(enlaces_internos)\n",
+    "\n",
+    "print(\"✅ Función extraer_enlaces_internos() definida\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c1bd4117",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Función scraping_multipagina_etico() definida\n"
+     ]
+    }
+   ],
+   "source": [
+    "def scraping_multipagina_etico(url_inicial, max_paginas=5, delay=5):\n",
+    "    \"\"\"\n",
+    "    Explora múltiples páginas de ADRES de forma ética buscando PDFs\n",
+    "    \n",
+    "    Args:\n",
+    "        url_inicial: URL de inicio\n",
+    "        max_paginas: Máximo de páginas a explorar (default 5 para ser conservador)\n",
+    "        delay: Segundos entre peticiones (mínimo 5 para no sobrecargar)\n",
+    "    \n",
+    "    Returns:\n",
+    "        Diccionario con todos los PDFs encontrados\n",
+    "    \"\"\"\n",
+    "    import time\n",
+    "    from urllib.parse import urlparse\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\"*70)\n",
+    "    print(\"🔍 EXPLORACIÓN MULTI-PÁGINA ÉTICA DE ADRES\")\n",
+    "    print(\"=\"*70)\n",
+    "    print(f\"\\n⚙️ Configuración:\")\n",
+    "    print(f\"   • Páginas máximas: {max_paginas}\")\n",
+    "    print(f\"   • Delay entre peticiones: {delay} segundos\")\n",
+    "    print(f\"   • Respeto robots.txt: SÍ\")\n",
+    "    \n",
+    "    # Verificar robots.txt\n",
+    "    print(f\"\\n1️⃣ Verificando robots.txt...\")\n",
+    "    if not verificar_robots_txt(url_inicial):\n",
+    "        print(\"❌ robots.txt no permite scraping. Deteniendo.\")\n",
+    "        return None\n",
+    "    \n",
+    "    todos_los_pdfs = {}\n",
+    "    paginas_exploradas = set()\n",
+    "    paginas_por_explorar = [url_inicial]\n",
+    "    \n",
+    "    print(f\"\\n2️⃣ Iniciando exploración...\")\n",
+    "    \n",
+    "    while paginas_por_explorar and len(paginas_exploradas) < max_paginas:\n",
+    "        url_actual = paginas_por_explorar.pop(0)\n",
+    "        \n",
+    "        # Evitar repetir páginas\n",
+    "        if url_actual in paginas_exploradas:\n",
+    "            continue\n",
+    "        \n",
+    "        print(f\"\\n   📄 Explorando: {url_actual}\")\n",
+    "        \n",
+    "        # Delay ético\n",
+    "        if len(paginas_exploradas) > 0:\n",
+    "            print(f\"      ⏳ Esperando {delay} segundos...\")\n",
+    "            time.sleep(delay)\n",
+    "        \n",
+    "        # Scraping de la página\n",
+    "        soup = scraping_etico(url_actual, delay=0)  # Ya esperamos arriba\n",
+    "        \n",
+    "        if soup is None:\n",
+    "            print(f\"      ⚠️ No se pudo acceder\")\n",
+    "            paginas_exploradas.add(url_actual)\n",
+    "            continue\n",
+    "        \n",
+    "        # Extraer PDFs de esta página\n",
+    "        pdfs_encontrados = extraer_enlaces_documentos(soup, url_actual)\n",
+    "        \n",
+    "        if pdfs_encontrados:\n",
+    "            print(f\"      ✅ {len(pdfs_encontrados)} PDF(s) encontrado(s)\")\n",
+    "            for pdf in pdfs_encontrados:\n",
+    "                todos_los_pdfs[pdf['url']] = pdf\n",
+    "        else:\n",
+    "            print(f\"      ℹ️ No se encontraron PDFs\")\n",
+    "        \n",
+    "        # Extraer enlaces internos para explorar más\n",
+    "        if len(paginas_exploradas) < max_paginas - 1:\n",
+    "            enlaces_internos = extraer_enlaces_internos(soup, url_actual)\n",
+    "            \n",
+    "            # Agregar nuevos enlaces (que no estén ya explorados)\n",
+    "            for enlace in enlaces_internos[:3]:  # Máximo 3 enlaces por página\n",
+    "                if enlace not in paginas_exploradas and enlace not in paginas_por_explorar:\n",
+    "                    paginas_por_explorar.append(enlace)\n",
+    "        \n",
+    "        paginas_exploradas.add(url_actual)\n",
+    "    \n",
+    "    # Resumen final\n",
+    "    print(\"\\n\" + \"=\"*70)\n",
+    "    print(\"✅ EXPLORACIÓN COMPLETADA\")\n",
+    "    print(\"=\"*70)\n",
+    "    print(f\"\\n📊 Estadísticas:\")\n",
+    "    print(f\"   • Páginas exploradas: {len(paginas_exploradas)}\")\n",
+    "    print(f\"   • PDFs únicos encontrados: {len(todos_los_pdfs)}\")\n",
+    "    print(f\"   • Tiempo total estimado: {len(paginas_exploradas) * delay} segundos\")\n",
+    "    \n",
+    "    if todos_los_pdfs:\n",
+    "        print(f\"\\n📄 PDFs encontrados:\")\n",
+    "        for i, (url_pdf, info) in enumerate(todos_los_pdfs.items(), 1):\n",
+    "            print(f\"   {i}. {info.get('titulo', 'Sin título')[:60]}\")\n",
+    "            print(f\"      URL: {url_pdf}\")\n",
+    "    \n",
+    "    return {\n",
+    "        'pdfs': list(todos_los_pdfs.values()),\n",
+    "        'total_pdfs': len(todos_los_pdfs),\n",
+    "        'paginas_exploradas': list(paginas_exploradas),\n",
+    "        'total_paginas': len(paginas_exploradas)\n",
+    "    }\n",
+    "\n",
+    "print(\"✅ Función scraping_multipagina_etico() definida\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cb3ca6f",
+   "metadata": {},
+   "source": [
+    "## 🚀 Ejemplo de Uso - Exploración Ampliada\n",
+    "\n",
+    "Ahora vamos a explorar múltiples páginas de ADRES para encontrar más PDFs de manera ética."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "c1fb771e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ℹ️ Exploración multi-página disponible.\n",
+      "📝 Para ejecutar, descomenta las siguientes líneas:\n",
+      "\n",
+      "# resultados_multipagina = scraping_multipagina_etico(\n",
+      "#     url_inicial='https://www.adres.gov.co/',\n",
+      "#     max_paginas=5,  # Explorar máximo 5 páginas\n",
+      "#     delay=5         # 5 segundos entre peticiones\n",
+      "# )\n",
+      "\n",
+      "💡 Alternativamente, explorar URLs específicas:\n",
+      "\n",
+      "# for url in URLS_ADRES_DOCUMENTOS:\n",
+      "#     print(f'\\n🔍 Analizando: {url}')\n",
+      "#     soup = scraping_etico(url, delay=5)\n",
+      "#     if soup:\n",
+      "#         pdfs = extraer_enlaces_documentos(soup, url)\n",
+      "#         print(f'   📄 PDFs encontrados: {len(pdfs)}')\n",
+      "#         for pdf in pdfs:\n",
+      "#             print(f'      • {pdf[\"url\"]}')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# URLs específicas de ADRES con más probabilidad de tener PDFs\n",
+    "URLS_ADRES_DOCUMENTOS = [\n",
+    "    \"https://www.adres.gov.co/\",  # Página principal\n",
+    "    \"https://normograma.adres.gov.co/compilacion/aprende_adres_guias.html\",  # Guías\n",
+    "]\n",
+    "\n",
+    "# Ejecutar exploración multi-página (COMENTAR SI NO DESEA EJECUTAR)\n",
+    "# ADVERTENCIA: Esto tomará varios minutos debido a los delays éticos\n",
+    "\n",
+    "print(\"ℹ️ Exploración multi-página disponible.\")\n",
+    "print(\"📝 Para ejecutar, descomenta las siguientes líneas:\")\n",
+    "print()\n",
+    "print(\"# resultados_multipagina = scraping_multipagina_etico(\")\n",
+    "print(\"#     url_inicial='https://www.adres.gov.co/',\")\n",
+    "print(\"#     max_paginas=5,  # Explorar máximo 5 páginas\")\n",
+    "print(\"#     delay=5         # 5 segundos entre peticiones\")\n",
+    "print(\"# )\")\n",
+    "print()\n",
+    "print(\"💡 Alternativamente, explorar URLs específicas:\")\n",
+    "print()\n",
+    "print(\"# for url in URLS_ADRES_DOCUMENTOS:\")\n",
+    "print(\"#     print(f'\\\\n🔍 Analizando: {url}')\")\n",
+    "print(\"#     soup = scraping_etico(url, delay=5)\")\n",
+    "print(\"#     if soup:\")\n",
+    "print(\"#         pdfs = extraer_enlaces_documentos(soup, url)\")\n",
+    "print(\"#         print(f'   📄 PDFs encontrados: {len(pdfs)}')\")\n",
+    "print(\"#         for pdf in pdfs:\")\n",
+    "print(\"#             print(f'      • {pdf[\\\"url\\\"]}')\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20d66f54",
+   "metadata": {},
+   "source": [
+    "## ✅ Prueba Rápida - URLs Específicas\n",
+    "\n",
+    "Vamos a probar con URLs específicas conocidas de ADRES para encontrar más PDFs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33c103fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 Explorando URLs específicas de ADRES...\n",
+      "\n",
+      "======================================================================\n",
+      "\n",
+      "📄 [1/2] Analizando: https://www.adres.gov.co/\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "# URLs específicas de ADRES con documentos\n",
+    "urls_adres_documentos = [\n",
+    "    \"https://www.adres.gov.co/\",\n",
+    "    \"https://normograma.adres.gov.co/compilacion/aprende_adres_guias.html\",\n",
+    "]\n",
+    "\n",
+    "print(\"🔍 Explorando URLs específicas de ADRES...\\n\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "todos_pdfs_encontrados = []\n",
+    "\n",
+    "for i, url in enumerate(urls_adres_documentos, 1):\n",
+    "    print(f\"\\n📄 [{i}/{len(urls_adres_documentos)}] Analizando: {url}\")\n",
+    "    \n",
+    "    # Delay ético adicional entre páginas diferentes\n",
+    "    if i > 1:\n",
+    "        print(f\"   ⏳ Esperando 3 segundos adicionales entre páginas...\")\n",
+    "        time.sleep(3)\n",
+    "    \n",
+    "    # Realizar scraping (la función ya tiene delay interno de 3s)\n",
+    "    soup = scraping_etico(url)\n",
+    "    \n",
+    "    if soup:\n",
+    "        # Extraer PDFs\n",
+    "        pdfs = extraer_enlaces_documentos(soup, url)\n",
+    "        \n",
+    "        if pdfs:\n",
+    "            print(f\"   ✅ {len(pdfs)} PDF(s) encontrado(s):\")\n",
+    "            for pdf in pdfs:\n",
+    "                url_corta = pdf['url'][:70] + '...' if len(pdf['url']) > 70 else pdf['url']\n",
+    "                print(f\"      • {url_corta}\")\n",
+    "                todos_pdfs_encontrados.append(pdf)\n",
+    "        else:\n",
+    "            print(f\"   ℹ️ No se encontraron PDFs en esta página\")\n",
+    "    else:\n",
+    "        print(f\"   ❌ No se pudo acceder a la página\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"✅ EXPLORACIÓN COMPLETADA\")\n",
+    "print(\"=\"*70)\n",
+    "print(f\"\\n📊 Resumen:\")\n",
+    "print(f\"   • URLs exploradas: {len(urls_adres_documentos)}\")\n",
+    "print(f\"   • Total PDFs encontrados: {len(todos_pdfs_encontrados)}\")\n",
+    "\n",
+    "# Eliminar duplicados por URL\n",
+    "pdfs_unicos = {pdf['url']: pdf for pdf in todos_pdfs_encontrados}\n",
+    "print(f\"   • PDFs únicos: {len(pdfs_unicos)}\")\n",
+    "print(f\"   • Tiempo total: ~{len(urls_adres_documentos) * 3 + (len(urls_adres_documentos)-1) * 3} segundos\")\n",
+    "\n",
+    "if pdfs_unicos:\n",
+    "    print(f\"\\n📄 Lista de PDFs únicos encontrados:\")\n",
+    "    for i, pdf in enumerate(pdfs_unicos.values(), 1):\n",
+    "        print(f\"   {i}. {pdf['url']}\")"
+   ]
   }
  ],
  "metadata": {
